Updated language editing
- Editable language files download from master only when missing
- Local translations remain intact with English fallback
- Language preferences live under languages
- The four-row language editor displays skill and adaptation icons
- Editor saves coordinate with automatic hot reload
- Diagnostic reports use /adapt debug dump